baml_language/crates/baml_tests/snapshots/compiles/catch_throw/baml_tests__compiles__catch_throw__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.AlsoMayFail(x: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // x // param

    bb0: {
        switch copy _1 [0: bb3, otherwise: bb1];
    }

    bb1: {
        _0 = const "also ok";
        goto -> bb2;
    }

    bb2: {
        return;
    }

    bb3: {
        throw const "secondary error";
    }
}

fn user.CatchAndRethrow(x: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // x // param
    let _2: unknown // e
    let _3: string

    bb0: {
        _0 = call const fn user.MayFail(copy _1) -> [bb1, unwind: bb2];
    }

    bb1: {
        return;
    }

    bb2: {
        throw_if_panic copy _2 -> bb3;
    }

    bb3: {
        _3 = copy _2;
        throw copy _3;
    }
}

fn user.CatchWithFallback(x: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // x // param
    let _2: unknown
    let _3: bool
    let _4: bool

    bb0: {
        _0 = call const fn user.MayFailIntOrString(copy _1) -> [bb6, unwind: bb1];
    }

    bb1: {
        _3 = is_type(copy _2, String { attr: TyAttr { sap_parse_without_null: Unset, sap_pending_never: Unset, sap_in_progress_never: Unset, asserts: [] } });
        branch copy _3 -> [bb5, bb2];
    }

    bb2: {
        _4 = is_type(copy _2, Int { attr: TyAttr { sap_parse_without_null: Unset, sap_pending_never: Unset, sap_in_progress_never: Unset, asserts: [] } });
        branch copy _4 -> [bb4, bb3];
    }

    bb3: {
        throw copy _2;
    }

    bb4: {
        _0 = const "caught int fallback";
        goto -> bb6;
    }

    bb5: {
        _0 = const "caught string";
        goto -> bb6;
    }

    bb6: {
        return;
    }
}

fn user.CatchWithTypedArm(x: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // x // param
    let _2: unknown // e
    let _3: bool

    bb0: {
        _0 = call const fn user.MayFail(copy _1) -> [bb4, unwind: bb1];
    }

    bb1: {
        _3 = is_type(copy _2, String { attr: TyAttr { sap_parse_without_null: Unset, sap_pending_never: Unset, sap_in_progress_never: Unset, asserts: [] } });
        branch copy _3 -> [bb3, bb2];
    }

    bb2: {
        throw copy _2;
    }

    bb3: {
        _0 = const "caught string";
        goto -> bb4;
    }

    bb4: {
        return;
    }
}

fn user.ChainedCatchClauses(x: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // x // param
    let _2: unknown
    let _3: bool
    let _4: bool

    bb0: {
        _0 = call const fn user.MayFailIntOrString(copy _1) -> [bb6, unwind: bb1];
    }

    bb1: {
        _3 = is_type(copy _2, String { attr: TyAttr { sap_parse_without_null: Unset, sap_pending_never: Unset, sap_in_progress_never: Unset, asserts: [] } });
        branch copy _3 -> [bb5, bb2];
    }

    bb2: {
        _4 = is_type(copy _2, Int { attr: TyAttr { sap_parse_without_null: Unset, sap_pending_never: Unset, sap_in_progress_never: Unset, asserts: [] } });
        branch copy _4 -> [bb4, bb3];
    }

    bb3: {
        throw copy _2;
    }

    bb4: {
        _0 = const "second handler";
        goto -> bb6;
    }

    bb5: {
        _0 = const "first handler";
        goto -> bb6;
    }

    bb6: {
        return;
    }
}

fn user.MayFail(x: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // x // param

    bb0: {
        switch copy _1 [0: bb3, otherwise: bb1];
    }

    bb1: {
        _0 = const "ok";
        goto -> bb2;
    }

    bb2: {
        return;
    }

    bb3: {
        throw const "string error";
    }
}

fn user.MayFailIntOrString(x: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // x // param

    bb0: {
        switch copy _1 [0: bb4, 1: bb3, otherwise: bb1];
    }

    bb1: {
        _0 = const "ok";
        goto -> bb2;
    }

    bb2: {
        return;
    }

    bb3: {
        throw const 1_i64;
    }

    bb4: {
        throw const "string error";
    }
}

fn user.MultipleCatchArms(x: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // x // param
    let _2: unknown // e
    let _3: bool
    let _4: bool

    bb0: {
        _0 = call const fn user.MayFailIntOrString(copy _1) -> [bb6, unwind: bb1];
    }

    bb1: {
        _3 = is_type(copy _2, String { attr: TyAttr { sap_parse_without_null: Unset, sap_pending_never: Unset, sap_in_progress_never: Unset, asserts: [] } });
        branch copy _3 -> [bb5, bb2];
    }

    bb2: {
        _4 = is_type(copy _2, Int { attr: TyAttr { sap_parse_without_null: Unset, sap_pending_never: Unset, sap_in_progress_never: Unset, asserts: [] } });
        branch copy _4 -> [bb4, bb3];
    }

    bb3: {
        throw copy _2;
    }

    bb4: {
        _0 = const "caught int";
        goto -> bb6;
    }

    bb5: {
        _0 = const "caught string";
        goto -> bb6;
    }

    bb6: {
        return;
    }
}

fn user.NestedCatch(x: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // x // param
    let _2: string // inner
    let _3: unknown // e
    let _4: unknown // e

    bb0: {
        _2 = call const fn user.MayFail(copy _1) -> [bb3, unwind: bb1];
    }

    bb1: {
        throw_if_panic copy _3 -> bb2;
    }

    bb2: {
        _2 = const "inner caught";
        goto -> bb3;
    }

    bb3: {
        _0 = call const fn user.AlsoMayFail(copy _1) -> [bb6, unwind: bb4];
    }

    bb4: {
        throw_if_panic copy _4 -> bb5;
    }

    bb5: {
        _0 = copy _2;
        goto -> bb6;
    }

    bb6: {
        return;
    }
}

fn user.SingleCatchTyped(x: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // x // param
    let _2: unknown // e
    let _3: bool

    bb0: {
        _0 = call const fn user.MayFail(copy _1) -> [bb4, unwind: bb1];
    }

    bb1: {
        _3 = is_type(copy _2, String { attr: TyAttr { sap_parse_without_null: Unset, sap_pending_never: Unset, sap_in_progress_never: Unset, asserts: [] } });
        branch copy _3 -> [bb3, bb2];
    }

    bb2: {
        throw copy _2;
    }

    bb3: {
        _0 = const "caught string";
        goto -> bb4;
    }

    bb4: {
        return;
    }
}

fn user.SingleCatchWildcard(x: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // x // param
    let _2: unknown // e

    bb0: {
        _0 = call const fn user.MayFail(copy _1) -> [bb3, unwind: bb1];
    }

    bb1: {
        throw_if_panic copy _2 -> bb2;
    }

    bb2: {
        _0 = const "caught";
        goto -> bb3;
    }

    bb3: {
        return;
    }
}

fn user.ThrowStatement(x: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // x // param

    bb0: {
        throw const "error";
    }
}
